<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MyActivity"
    android:id="@+id/my_id"
    android:background="@drawable/bg" >

    <TabHost
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/tabHost">

         <TabWidget
             android:tabStripEnabled="false"                android:id="@android:id/tabs"
             android:layout_width="fill_parent"
             android:orientation="horizontal"
             android:focusableInTouchMode="false"
             android:showDividers="none"
             android:divider="#ffffffff"
             android:dividerPadding="4sp"
             style="@android:color/white"
             android:clickable="false"
             android:layout_weight="0"
             android:foreground="@null"
             android:layout_marginBottom="-6dp"
             android:layout_height="wrap_content" />

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:paddingTop="60sp">

                <LinearLayout
                    android:id="@+id/tab2"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:showDividers="beginning|middle|end"
                    android:orientation="vertical">

                    <ListView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/lvMessages"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="1" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="100sp"
                        android:id="@+id/tvMessages"
                        android:gravity="center_vertical|center_horizontal" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:id="@+id/tab1"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:clickable="false"
                    android:showDividers="beginning|middle|end">

                        <TextView
                            android:id="@+id/tv_result"
                            android:layout_width="match_parent"
                            android:layout_height="28dp"
                            android:gravity="center"
                            android:textSize="11sp"
                            android:height="80dp"
                            android:focusableInTouchMode="false"
                            android:layout_marginTop="5sp" />

                        <ImageView
                            android:layout_width="138dp"
                            android:layout_height="96dp"
                            android:id="@+id/imageView"
                            android:background="@drawable/fitness"
                            android:layout_gravity="center_horizontal"
                            android:contentDescription="@string/Image" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/MoodTitle"
                            android:id="@+id/textView"
                            android:textColor="#ffffffff"
                            android:gravity="center_horizontal" />

                        <SeekBar
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:progress="50"
                            android:max="100"
                            style="@style/CustomSeekBar"
                            android:secondaryProgress="0"
                            android:id="@+id/seekBarGeneral"
                            android:indeterminate="false"
                            android:layout_marginTop="5dip" />

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:weightSum="1"
                            android:focusableInTouchMode="false">

                            <TextView
                                android:layout_width="0sp"
                                android:layout_height="wrap_content"
                                android:text="@string/MoodLow"
                                android:id="@+id/textView2"
                                android:textColor="#ffffffff"
                                android:gravity="left"
                                android:layout_weight="0.25" />

                            <TextView
                                android:layout_width="0sp"
                                android:layout_height="wrap_content"
                                android:text="@string/MoodMedium"
                                android:id="@+id/textView3"
                                android:textColor="#ffffffff"
                                android:gravity="center_horizontal"
                                android:layout_weight="0.50"
                                android:clickable="true" />

                            <TextView
                                android:layout_width="0sp"
                                android:layout_height="wrap_content"
                                android:text="@string/MoodHigh"
                                android:id="@+id/textView4"
                                android:textColor="#ffffffff"
                                android:layout_weight="0.25"
                                android:gravity="right" />
                        </LinearLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/SleepTitle"
                            android:id="@+id/textView5"
                            android:textColor="#ffffffff"
                            android:gravity="center_horizontal"
                            android:layout_marginTop="10sp" />

                        <SeekBar
                            style="@style/CustomSeekBar"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:progress="50"
                            android:max="100"
                            android:secondaryProgress="0"
                            android:id="@+id/seekBarSleep"
                            android:indeterminate="false"
                            android:layout_gravity="center_vertical"
                            android:focusableInTouchMode="true"
                            android:layout_marginTop="5dp" />

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:weightSum="1"
                            android:id="@+id/linearLayout">

                            <TextView
                                android:layout_width="0sp"
                                android:layout_height="wrap_content"
                                android:text="@string/SleepLow"
                                android:id="@+id/textView6"
                                android:textColor="#ffffffff"
                                android:gravity="left"
                                android:layout_weight="0.25" />

                            <TextView
                                android:layout_width="0sp"
                                android:layout_height="wrap_content"
                                android:text="@string/SleepMedium"
                                android:id="@+id/textView7"
                                android:textColor="#ffffffff"
                                android:gravity="center_horizontal"
                                android:layout_weight="0.50" />

                            <TextView
                                android:layout_width="0sp"
                                android:layout_height="wrap_content"
                                android:text="@string/SleepHigh"
                                android:id="@+id/textView8"
                                android:textColor="#ffffffff"
                                android:layout_weight="0.25"
                                android:gravity="right" />
                        </LinearLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/ExerciceTitle"
                            android:id="@+id/textView9"
                            android:textColor="#ffffffff"
                            android:gravity="center_horizontal"
                            android:layout_marginTop="10sp" />

                        <SeekBar
                            style="@style/CustomSeekBar"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:progress="50"
                            android:max="100"
                            android:secondaryProgress="0"
                            android:id="@+id/seekBarExercice"
                            android:indeterminate="false"
                            android:layout_gravity="center_vertical"
                            android:focusableInTouchMode="true"
                            android:layout_marginTop="5dp" />

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:weightSum="1"
                            android:id="@+id/linearLayout2" >

                            <TextView
                                android:layout_width="0sp"
                                android:layout_height="wrap_content"
                                android:text="@string/ExerciceLow"
                                android:id="@+id/textView10"
                                android:textColor="#ffffffff"
                                android:gravity="left"
                                android:layout_weight="0.25" />

                            <TextView
                                android:layout_width="0sp"
                                android:layout_height="wrap_content"
                                android:text="@string/ExerciceMedium"
                                android:id="@+id/textView11"
                                android:textColor="#ffffffff"
                                android:gravity="center_horizontal"
                                android:layout_weight="0.50"
                                android:singleLine="true" />

                            <TextView
                                android:layout_width="0sp"
                                android:layout_height="wrap_content"
                                android:text="@string/ExerciceHigh"
                                android:id="@+id/textView12"
                                android:textColor="#ffffffff"
                                android:layout_weight="0.25"
                                android:gravity="right" />
                        </LinearLayout>

                        <Button
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/Submit"
                            android:id="@+id/butSubmit"
                            android:onClick="butSubmitPressed"
                            android:layout_marginTop="5sp" />
                    </LinearLayout>

            </FrameLayout>

    </TabHost>

</RelativeLayout>
